[tool.poetry]
name = "try-fastapi"
version = "0.1.0"
description = ""
authors = ["akitanak <akihito_tanaka@me.com>"]

[tool.poetry.dependencies]
python = "^3.8"
fastapi = "0.61.1"
uvicorn = "^0.11.8"
requests = "^2.24.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
flake8 = "^3.8.3"
mypy = "^0.782"
autopep8 = "^1.5.4"
black = "^20.8b1"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
